Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117011

Missing QTest::toString(q/uint128)

XMLWordPrintable

    • 3
    • ab910e09c (dev)
    • Foundation Sprint 90, Foundation Sprint 91, Foundation Sprint 92, Foundation Sprint 93, Foundations Sprint 94, Foundations Sprint 95, Foundations Sprint 96, Foundations Sprint 97

      When Qt 6.6 added support for q(u)int128, it forgot to add QTest::toString() support for it. Without it, it's pretty hard to write tests using those types.

      We already have a local implementation in tst_qglobal.cpp, just need to extract it, polish it, and somehow get it into tst_selftest.

      TODO: Can we use qint128 under QT_SUPPORTS_INT128 protection, or do we require builds with and without __int128 support to be BC?

      Acceptance criteria:

      • QTest::toString() works with qint128 and quint128 on all QT_SUPPORTS_INT128 platforms
        • not by falling back on one of the narrower integer types
      • checked by tst_selftest

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mmutz Marc Mutz
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes